[project]
name = "champotwins"
version = "1.0.0"
authors = [
    {name = "DR", email = "contact@brainvisa.info"},
]
description = "Find twins from Champollion embeddings distances"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause license"}
classifiers = [
    "Intended Audience :: Users",
    "License :: OSI Approved",
    "Development Status :: 5 - Production/Stable",
    "Environment :: GUI",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: French",
    "Topic :: Brain research",
]
dependencies = [
  'pandas', 'numpy', 'json', 'sklearn', 'matplotlib'
]

[project.optional-dependencies]
doc = [
    "sphinx >=1.0", "matplotlib",
]

[project.urls]
homepage = "https://github.com/neurospin-projects/2025_driviere_champotwins"
repository = "https://github.com/neurospin-projects/2025_driviere_champotwins"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]

#[tool.setuptools.package-data]
#twingame = ['share/*']

[tool.brainvisa-cmake]

